[workspace]
members = [
    "programs/drishti-registry",
    "programs/drishti-core",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
