[package]
name = "drishti-core"
version = "0.1.0"
description = "Drishti — Core fiscal integrity protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drishti_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true, features = ["token_2022", "token_2022_extensions"] }
borsh = "1.5.1"
