[package]
name = "drishti-registry"
version = "0.1.0"
description = "Drishti — Government wallet registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drishti_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
